--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -153,7 +153,7 @@
     "    min=lo_bnds[col_y],\n",
     "    max=up_bnds[col_y],\n",
     "    step=(up_bnds[col_y]-lo_bnds[col_y])/10,\n",
-    "    description='Longitude:',\n",
+    "    description='Latitude:',\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
     "    orientation='horizontal',\n",
