adding a dataflow view via graphviz[skip ci]

--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -108,6 +108,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e29f7146-2212-4955-a81a-33c7d66234d3",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Show the dataflow\n",
+    "import graphviz \n",
+    "src = csv.scheduler().to_graphviz()\n",
+    "gvz=graphviz.Source(src)\n",
+    "display(gvz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "95e97dd2-d99a-4f04-90ca-1fae2409dc74",
    "metadata": {
     "jupyter": {
@@ -176,11 +194,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db3beba1-49a7-4ead-9262-fc9e48572c3a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Show what runs\n",
@@ -200,18 +214,6 @@
    "source": [
     "csv.scheduler().task_stop();"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71acd9d0-d64b-4576-8618-9670dfb8734e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
