Add doc [skip ci]

--- a/notebooks/userguide1.ipynb
+++ b/notebooks/userguide1.ipynb
@@ -32,6 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "LARGE_TAXI_FILE = \"https://www.aviz.fr/nyc-taxi/yellow_tripdata_2015-01.csv.bz2\"\n",
     "RESOLUTION=512"
    ]
