--- a/notebooks/userguide1.2.ipynb
+++ b/notebooks/userguide1.2.ipynb
@@ -22,6 +22,8 @@
    },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "LARGE_TAXI_FILE = \"https://www.aviz.fr/nyc-taxi/yellow_tripdata_2015-01.csv.bz2\"\n",
     "RESOLUTION=512"
    ]
@@ -35,15 +37,16 @@
    },
    "outputs": [],
    "source": [
-    "# Function to filter out trips outside of NYC.\n",
-    "\n",
     "# See https://en.wikipedia.org/wiki/Module:Location_map/data/USA_New_York_City\n",
-    "bounds = {\n",
-    "\t\"top\": 40.92,\n",
-    "\t\"bottom\": 40.49,\n",
-    "\t\"left\": -74.27,\n",
-    "\t\"right\": -73.68,\n",
-    "}"
+    "from dataclasses import dataclass\n",
+    "@dataclass\n",
+    "class Bounds:\n",
+    "    top: float = 40.92\n",
+    "    bottom: float = 40.49\n",
+    "    left: float = -74.27\n",
+    "    right: float = -73.68\n",
+    "\n",
+    "bounds = Bounds()"
    ]
   },
   {
@@ -58,8 +61,8 @@
     "# Create a csv loader filtering out data outside NYC\n",
     "csv = CSVLoader(LARGE_TAXI_FILE, index_col=False, usecols=['pickup_longitude', 'pickup_latitude'])\n",
     "# Create a module to compute the min value progressively\n",
-    "min = ConstDict(PDict({'pickup_longitude': bounds['left'], 'pickup_latitude': bounds['bottom']}))\n",
-    "max = ConstDict(PDict({'pickup_longitude': bounds['right'], 'pickup_latitude': bounds['top']}))\n",
+    "min = ConstDict(PDict({'pickup_longitude': bounds.left, 'pickup_latitude': bounds.bottom}))\n",
+    "max = ConstDict(PDict({'pickup_longitude': bounds.right, 'pickup_latitude': bounds.top}))\n",
     "\n",
     "# Create a module to compute the 2D histogram of the two columns specified\n",
     "# with the given resolution\n",
