adding an user guide for progressive notebooks[skip ci]

--- a/notebooks/userguide1.1.ipynb
+++ b/notebooks/userguide1.1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a6f94d61-ae60-4b69-bef0-3289f9fe2f56",
    "metadata": {
     "lines_to_next_cell": 2
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "111d0243-4f2c-4c3e-8c73-b9482bbeed12",
    "metadata": {},
    "outputs": [],
@@ -41,23 +41,12 @@
     "\t\"bottom\": 40.49,\n",
     "\t\"left\": -74.27,\n",
     "\t\"right\": -73.68,\n",
-    "}\n",
-    "\n",
-    "# Since there are outliers in the files.\n",
-    "def filter_(df):\n",
-    "    lon = df['pickup_longitude']\n",
-    "    lat = df['pickup_latitude']\n",
-    "    return df[\n",
-    "        (lon>bounds[\"left\"]) &\n",
-    "        (lon<bounds[\"right\"]) &\n",
-    "        (lat>bounds[\"bottom\"]) &\n",
-    "        (lat<bounds[\"top\"])\n",
-    "    ]"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bbbd6ce8-a031-4981-945c-8925e7211b22",
    "metadata": {},
    "outputs": [],
@@ -90,44 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "95e97dd2-d99a-4f04-90ca-1fae2409dc74",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45d4bddd8d9043fb8f69b77185d7e890",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(IntProgress(value=0, description='0/0', max=1000), Button(description='Save', ic…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:273>>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting scheduler\n",
-      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'max_1', 'min_1']\n",
-      "Leaving run loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "heatmap.display_notebook()\n",
     "# Start the scheduler\n",
@@ -136,49 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "db3beba1-49a7-4ead-9262-fc9e48572c3a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<p><b>Scheduler</b> 0x7fe041fd47d0\n",
-       "        <b>running</b>,\n",
-       "        <b>modules:</b> 5,\n",
-       "        <b>run number:</b> 170\n",
-       "</p>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>166</td><td>0</td><tr><td>min_1</td><td>min</td><td>state_blocked</td><td>167</td><td>1</td><tr><td>max_1</td><td>max</td><td>state_blocked</td><td>168</td><td>2</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>169</td><td>3</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>170</td><td>4</td></tbody></table>"
-      ],
-      "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x7fe041fd47d0>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show what runs\n",
     "csv.scheduler()"
@@ -186,21 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ea0675db-976b-43b7-a456-3ee810039641",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv.scheduler().task_stop()"
    ]
@@ -230,7 +135,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.4"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
