--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -282,7 +282,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7a6cc63432d0>"
+       "<graphviz.sources.Source at 0x7fc0621d7aa0>"
       ]
      },
      "metadata": {},
@@ -306,7 +306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e362c613edd47f799bb21666f6f753c",
+       "model_id": "2fa07613b62d418086ee6a300d0f075f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "768fc3242a3e40198954bd3bb62c3152",
+       "model_id": "5817ba3ff27e4f448f2840ea8e3e4ed7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +388,7 @@
     "        long_min, long_max = long_slider.value\n",
     "        lat_min, lat_max = lat_slider.value\n",
     "        await var_min.from_input({col_x: long_min, col_y: lat_min})\n",
-    "        await var_up.from_input({col_x: long_max, col_y: lat_max})\n",
+    "        await var_max.from_input({col_x: long_max, col_y: lat_max})\n",
     "    aio.create_task(_coro())\n",
     "long_slider.observe(observer, \"value\")\n",
     "lat_slider.observe(observer, \"value\")\n",
@@ -418,10 +418,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x7a6c8c1f7850\n",
+       "<p><b>Scheduler</b> 0x7fc0621f1310\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 7,\n",
-       "        <b>run number:</b> 481\n",
+       "        <b>run number:</b> 14531\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -429,10 +429,10 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>477</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>478</td><td>1</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>479</td><td>2</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>480</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>481</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>69</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>7</td><td>6</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>14530</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>14531</td><td>1</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>14525</td><td>2</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>14526</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>14527</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>14528</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>14529</td><td>6</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x7a6c8c1f7850>"
+       "<progressivis.core.scheduler.Scheduler at 0x7fc0621f1310>"
       ]
      },
      "execution_count": 7,
@@ -454,7 +454,7 @@
     {
      "data": {
       "text/plain": [
-       "<Task pending name='Task-9' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
+       "<Task pending name='Task-13' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:606>>"
       ]
      },
      "execution_count": 8,
@@ -463,7 +463,7 @@
     }
    ],
    "source": [
-    "csv.scheduler().task_stop()"
+    "# csv.scheduler().task_stop()"
    ]
   }
  ],
@@ -483,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
