--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -282,7 +282,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7fc0621d7aa0>"
+       "<graphviz.sources.Source at 0x73152803d460>"
       ]
      },
      "metadata": {},
@@ -306,7 +306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fa07613b62d418086ee6a300d0f075f",
+       "model_id": "33aaacbe47014a329c450bb090eb701d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,8 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting scheduler\n",
-      "Leaving run loop\n"
+      "Starting scheduler\n"
      ]
     }
    ],
@@ -344,7 +343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5817ba3ff27e4f448f2840ea8e3e4ed7",
+       "model_id": "03d5b232abf04ceb97a187d73af84e54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -418,10 +417,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x7fc0621f1310\n",
+       "<p><b>Scheduler</b> 0x73151c1020c0\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 7,\n",
-       "        <b>run number:</b> 14531\n",
+       "        <b>run number:</b> 484\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -429,10 +428,10 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>14530</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>14531</td><td>1</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>14525</td><td>2</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>14526</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>14527</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>14528</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>14529</td><td>6</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>484</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>478</td><td>1</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>479</td><td>2</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>480</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>481</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>69</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>7</td><td>6</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x7fc0621f1310>"
+       "<progressivis.core.scheduler.Scheduler at 0x73151c1020c0>"
       ]
      },
      "execution_count": 7,
@@ -450,24 +449,16 @@
    "execution_count": 8,
    "id": "fb05edcf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending name='Task-13' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:606>>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# csv.scheduler().task_stop()"
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,auto:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
