Check graphviz [skip ci]

--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "from progressivis import (\n",
-    "    CSVLoader, Histogram2D, ConstDict, Heatmap, PDict, \n",
+    "    CSVLoader, Histogram2D, ConstDict, Heatmap, PDict,\n",
     "    BinningIndexND, RangeQuery2d, Variable\n",
     ")\n",
     "import progressivis.core.aio as aio\n",
@@ -73,7 +73,7 @@
     "# Creates one index per numeric column\n",
     "index.input.table = csv.output.result[col_x, col_y]\n",
     "# Create a querying module\n",
-    "query = RangeQuery2d(column_x=col_x, \n",
+    "query = RangeQuery2d(column_x=col_x,\n",
     "                     column_y=col_y\n",
     "                    )\n",
     "# Variable modules allow to dynamically modify their values; here, the query ranges\n",
@@ -282,7 +282,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x73152803d460>"
+       "<graphviz.sources.Source at 0x79ba0cd8a5a0>"
       ]
      },
      "metadata": {},
@@ -290,11 +290,16 @@
     }
    ],
    "source": [
-    "# Show the dataflow\n",
-    "import graphviz \n",
-    "src = csv.scheduler().to_graphviz()\n",
-    "gvz=graphviz.Source(src)\n",
-    "display(gvz)"
+    "# Show the dataflow, you need to install graphviz to run this cell\n",
+    "# pip install graphviz\n",
+    "#\n",
+    "try:\n",
+    "    import graphviz\n",
+    "    src = csv.scheduler().to_graphviz()\n",
+    "    gvz=graphviz.Source(src)\n",
+    "    display(gvz)\n",
+    "except ImportError:\n",
+    "    pass"
    ]
   },
   {
@@ -306,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33aaacbe47014a329c450bb090eb701d",
+       "model_id": "b4d818d1216a43319c3a5baf1f3fa055",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03d5b232abf04ceb97a187d73af84e54",
+       "model_id": "608b7196d6a64b4092e069694ed46a75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,10 +422,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x73151c1020c0\n",
+       "<p><b>Scheduler</b> 0x79b9c747d9a0\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 7,\n",
-       "        <b>run number:</b> 484\n",
+       "        <b>run number:</b> 2626\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -428,10 +433,10 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>484</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>478</td><td>1</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>479</td><td>2</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>480</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>481</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>69</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>7</td><td>6</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>2624</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>2625</td><td>1</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>2626</td><td>2</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>2620</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>2621</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>2622</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>2623</td><td>6</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x73151c1020c0>"
+       "<progressivis.core.scheduler.Scheduler at 0x79b9c747d9a0>"
       ]
      },
      "execution_count": 7,
@@ -457,7 +462,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:percent"
+   "formats": "ipynb,py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
