--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -282,7 +282,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x79ba0cd8a5a0>"
+       "<graphviz.sources.Source at 0x7dba72b47380>"
       ]
      },
      "metadata": {},
@@ -311,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4d818d1216a43319c3a5baf1f3fa055",
+       "model_id": "a22e2acbfdeb4c55a46b01d6bb50bb1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,12 +343,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "4f8c279b-4a2f-4aef-af62-78a2dcc1829d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "608b7196d6a64b4092e069694ed46a75",
+       "model_id": "a5c4154074474ced827287cefde6a5db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,10 +426,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x79b9c747d9a0\n",
+       "<p><b>Scheduler</b> 0x7dba72b46900\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 7,\n",
-       "        <b>run number:</b> 2626\n",
+       "        <b>run number:</b> 350\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -433,10 +437,10 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>2624</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>2625</td><td>1</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>2626</td><td>2</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>2620</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>2621</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>2622</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>2623</td><td>6</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>344</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>345</td><td>1</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>346</td><td>2</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>347</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>348</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>69</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>7</td><td>6</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x79b9c747d9a0>"
+       "<progressivis.core.scheduler.Scheduler at 0x7dba72b46900>"
       ]
      },
      "execution_count": 7,
@@ -479,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
