--- a/notebooks/userguide1.ipynb
+++ b/notebooks/userguide1.ipynb
@@ -54,28 +54,24 @@
     }
    ],
    "source": [
-    "from progressivis import (\n",
-    "    CSVLoader,\n",
-    "    Histogram2D,\n",
-    "    Quantiles,\n",
-    "    Heatmap\n",
-    ")\n",
+    "import progressivis as pv\n",
     "\n",
     "# Create a csv loader filtering out data outside NYC\n",
-    "csv = CSVLoader(LARGE_TAXI_FILE, index_col=False, usecols=['pickup_longitude', 'pickup_latitude'])  # , filter_=filter_)\n",
+    "csv = pv.ThreadedCSVLoader(LARGE_TAXI_FILE, index_col=False, usecols=['pickup_longitude', 'pickup_latitude'])  # , filter_=filter_)\n",
+    "csv.on_ending(lambda mod, rn : print(f\"Finished in {round(csv.scheduler().timer())} second(s)\"))\n",
     "\n",
     "# Create a Quantile module to get rid of the 3% outliers both sides\n",
-    "quantiles = Quantiles()\n",
+    "quantiles = pv.Quantiles()\n",
     "quantiles.input.table = csv.output.result\n",
     "# Create a module to compute the 2D histogram of the two columns specified\n",
     "# with the given resolution\n",
-    "histogram2d = Histogram2D('pickup_longitude', 'pickup_latitude', xbins=RESOLUTION, ybins=RESOLUTION)\n",
+    "histogram2d = pv.Histogram2D('pickup_longitude', 'pickup_latitude', xbins=RESOLUTION, ybins=RESOLUTION)\n",
     "# Connect the module to the csv results and the min,max bounds to rescale\n",
     "histogram2d.input.table = csv.output.result\n",
     "histogram2d.input.min = quantiles.output.result[0.03]\n",
     "histogram2d.input.max = quantiles.output.result[0.97]\n",
     "# Create a module to create an heatmap image from the histogram2d\n",
-    "heatmap = Heatmap()\n",
+    "heatmap = pv.Heatmap()\n",
     "# Connect it to the histogram2d\n",
     "heatmap.input.array = histogram2d.output.result"
    ]
@@ -89,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f26b81f8584e1b90f63b2d1816272a",
+       "model_id": "40db852a5eaa45f6898123ff0e05b805",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:273>>"
+       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:271>>"
       ]
      },
      "execution_count": 5,
@@ -126,7 +122,8 @@
      "output_type": "stream",
      "text": [
       "Starting scheduler\n",
-      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'quantiles_1']\n",
+      "# Scheduler added module(s): ['heatmap_1', 'histogram2_d_1', 'quantiles_1', 'threaded_csv_loader_1']\n",
+      "Finished in 69 second(s)\n",
       "Leaving run loop\n"
      ]
     }
@@ -138,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7741831c-7a31-4aee-be94-455bee16805d",
    "metadata": {},
    "outputs": [
@@ -159,10 +156,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x7226b63006d0\n",
+       "<p><b>Scheduler</b> 0x70c25356acf0\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 4,\n",
-       "        <b>run number:</b> 1759\n",
+       "        <b>run number:</b> 0\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -170,13 +167,13 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>1757</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_blocked</td><td>1758</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_ready</td><td>1759</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>1756</td><td>3</td></tbody></table>"
+       "  <tbody><tr><td>threaded_csv_loader_1</td><td>threaded_csv_loader</td><td>state_ready</td><td>0</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_ready</td><td>0</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_ready</td><td>0</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_ready</td><td>0</td><td>3</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x7226b63006d0>"
+       "<progressivis.core.scheduler.Scheduler at 0x70c25356acf0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,25 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "570f93a3-55f4-403a-9799-f63466777d5f",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "csv.scheduler().task_stop()"
+    "# csv.scheduler().task_stop()"
    ]
   },
   {
@@ -237,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
