Fix Module.ending() to avoid reseting output slots

--- a/notebooks/userguide1.ipynb
+++ b/notebooks/userguide1.ipynb
@@ -85,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40db852a5eaa45f6898123ff0e05b805",
+       "model_id": "d90557115ae548858e183d489c67769e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,8 +123,7 @@
      "text": [
       "Starting scheduler\n",
       "# Scheduler added module(s): ['heatmap_1', 'histogram2_d_1', 'quantiles_1', 'threaded_csv_loader_1']\n",
-      "Finished in 69 second(s)\n",
-      "Leaving run loop\n"
+      "Finished in 76 second(s)\n"
      ]
     }
    ],
@@ -156,7 +155,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x70c25356acf0\n",
+       "<p><b>Scheduler</b> 0x75d84cb56cf0\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 4,\n",
        "        <b>run number:</b> 0\n",
@@ -170,7 +169,7 @@
        "  <tbody><tr><td>threaded_csv_loader_1</td><td>threaded_csv_loader</td><td>state_ready</td><td>0</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_ready</td><td>0</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_ready</td><td>0</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_ready</td><td>0</td><td>3</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x70c25356acf0>"
+       "<progressivis.core.scheduler.Scheduler at 0x75d84cb56cf0>"
       ]
      },
      "execution_count": 6,
