Improve the doc and fix userguide1.3 [ci skip]

--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -5,8 +5,7 @@
    "id": "68e6958a-9327-4c15-95c5-0773c0e8b16a",
    "metadata": {},
    "source": [
-    "# Progressive Loading and Visualization\n",
-    "\n",
+    "# Progressive Loading and Visualization with Interactions\n",
     "This notebook shows the simplest code to download all the New York Yellow Taxi trips from 2015. They were all geolocated and the trip data is stored in multiple CSV files.\n",
     "We visualize progressively the pickup locations (where people have been picked up by the taxis).\n",
     "\n",
@@ -100,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e29f7146-2212-4955-a81a-33c7d66234d3",
+   "id": "45a838ce-0478-426c-8e47-6eb6c62bf9d2",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +281,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7dba72b47380>"
+       "<graphviz.sources.Source at 0x7d2cfc39b5f0>"
       ]
      },
      "metadata": {},
@@ -290,16 +289,13 @@
     }
    ],
    "source": [
-    "# Show the dataflow, you need to install graphviz to run this cell\n",
-    "# pip install graphviz\n",
-    "#\n",
     "try:\n",
     "    import graphviz\n",
     "    src = csv.scheduler().to_graphviz()\n",
     "    gvz=graphviz.Source(src)\n",
     "    display(gvz)\n",
     "except ImportError:\n",
-    "    pass"
+    "    pass\n"
    ]
   },
   {
@@ -311,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a22e2acbfdeb4c55a46b01d6bb50bb1d",
+       "model_id": "42ae0ce214144f81a3e0140d71d3617a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,6 +324,23 @@
      "text": [
       "Starting scheduler\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaving run loop\n"
+     ]
     }
    ],
    "source": [
@@ -336,23 +349,19 @@
     "csv.scheduler().task_start();\n",
     "await aio.sleep(1)\n",
     "await var_min.from_input(bnds_min)\n",
-    "await var_max.from_input(bnds_max);"
+    "await var_max.from_input(bnds_max)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4f8c279b-4a2f-4aef-af62-78a2dcc1829d",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "ed405f94-895a-47cb-97f2-b586b7d829a2",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5c4154074474ced827287cefde6a5db",
+       "model_id": "be90bdb8a8514d908092435a60e5947a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,10 +435,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x7dba72b46900\n",
+       "<p><b>Scheduler</b> 0x7d2cc9478680\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 7,\n",
-       "        <b>run number:</b> 350\n",
+       "        <b>run number:</b> 3655\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -437,10 +446,10 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>344</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>345</td><td>1</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>346</td><td>2</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>347</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>348</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>69</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>7</td><td>6</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>3649</td><td>0</td><tr><td>binning_index_nd_1</td><td>binning_index_nd</td><td>state_ready</td><td>3650</td><td>1</td><tr><td>var_min</td><td>variable</td><td>state_blocked</td><td>3651</td><td>2</td><tr><td>var_max</td><td>variable</td><td>state_blocked</td><td>3652</td><td>3</td><tr><td>range_query2d_1</td><td>range_query2d</td><td>state_blocked</td><td>3653</td><td>4</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>3654</td><td>5</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>3655</td><td>6</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x7dba72b46900>"
+       "<progressivis.core.scheduler.Scheduler at 0x7d2cc9478680>"
       ]
      },
      "execution_count": 7,
@@ -456,18 +465,34 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fb05edcf",
+   "id": "ea0675db-976b-43b7-a456-3ee810039641",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-11' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv.scheduler().task_stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e78fb0a9-900a-4063-9117-2cbfa604fcd8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# csv.scheduler().task_stop()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
-  "jupytext": {
-   "formats": "ipynb,py:percent"
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -483,14 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
-  },
-  "widgets": {
-   "application/vnd.jupyter.widget-state+json": {
-    "state": {},
-    "version_major": 2,
-    "version_minor": 0
-   }
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
