Rename howlong->quantum and IndexUpdate->Delta

--- a/doc/RunStepDecorators.ipynb
+++ b/doc/RunStepDecorators.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "    @process_slot(\"a\", \"b\", \"c\", \"d\", reset_if=False)    \n",
     "    @run_if_any # mandatory run condition decorator, explained below\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -127,7 +127,7 @@
     "    @process_slot(\"c\", reset_if='update')\n",
     "    @process_slot(\"d\", reset_if=False)\n",
     "    @run_if_any # mandatory run condition decorator, explained below\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -160,7 +160,7 @@
     "    # @run_if_any without arguments\n",
     "    @process_slot(\"a\", \"b\", \"c\", \"d\") \n",
     "    @run_if_any # run if at least one among \"a\", \"b\", \"c\", \"d\" slots contains new data\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -174,7 +174,7 @@
     "    # @run_if_any with arguments    \n",
     "    @process_slot(\"a\", \"b\", \"c\", \"d\") \n",
     "    @run_if_any(\"b\", \"d\") # run if at least one between b\" and \"d\" slots contains new data\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -199,7 +199,7 @@
     "    @process_slot(\"a\", \"b\", \"c\", \"d\") \n",
     "    @run_if_any(\"a\", \"c\")\n",
     "    @and_any(\"b\", \"d\") \n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -222,7 +222,7 @@
     "    # @run_if_all without arguments\n",
     "    @process_slot(\"a\", \"b\", \"c\", \"d\") \n",
     "    @run_if_all # all \"a\", \"b\", \"c\", \"d\" slots contains new data\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -236,7 +236,7 @@
     "    # @run_if_all with arguments\n",
     "    @process_slot(\"a\", \"b\", \"c\", \"d\") \n",
     "    @run_if_all(\"b\", \"d\") # run if both b\" and \"d\" slots contains new data\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -261,7 +261,7 @@
     "    @process_slot(\"a\", \"b\", \"c\", \"d\") \n",
     "    @run_if_all(\"a\", \"c\")\n",
     "    @or_all(\"b\", \"d\") \n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
@@ -283,7 +283,7 @@
    "source": [
     "    @process_slot(\"a\", \"b\", \"c\", \"d\") \n",
     "    @run_always\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        with self.context as ctx:\n",
     "            pass # do something"
    ]
