--- a/doc/WritingAModule.ipynb
+++ b/doc/WritingAModule.ipynb
@@ -32,11 +32,11 @@
     "              SlotDescriptor('second', type=Table, required=True)]\n",
     "    # defining the \"outputs\" attribute is not necessary when \n",
     "    # only one output is requested. Just use the already defined \"table\" output\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        \"\"\"\n",
     "        * run_number: identifies the current run step\n",
     "        * step_size: number of rows to be processed in this step\n",
-    "        * howlong: assigned time for this step\n",
+    "        * quantum: assigned time for this step\n",
     "        \"\"\" \n",
     "        pass # your algorithm "
    ]
@@ -76,7 +76,7 @@
     "class MyModule(TableModule):\n",
     "    inputs = [SlotDescriptor('first', type=Table, required=True), \n",
     "              SlotDescriptor('second', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('first') # /!\\\n",
     "        # ..."
    ]
@@ -97,7 +97,7 @@
     "class MyModule(TableModule):\n",
     "    inputs = [SlotDescriptor('first', type=Table, required=True), \n",
     "              SlotDescriptor('second', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        for slot_name, slot in self._input_slots.items(): # /!\\\n",
     "            if slot is None: # e.g. _params slot not provided\n",
     "                continue\n",
@@ -136,7 +136,7 @@
     "class MyModule(TableModule):\n",
     "    inputs = [SlotDescriptor('first', type=Table, required=True), \n",
     "              SlotDescriptor('second', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('first')\n",
     "        if not slot.has_buffered():\n",
     "            return self._return_run_step(self.state_blocked, steps_run=0) # /!\\\n",
@@ -162,7 +162,7 @@
    "source": [
     "class Max(TableModule):\n",
     "    inputs = [SlotDescriptor('table', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('table')\n",
     "        if slot.updated.any() or slot.deleted.any():\n",
     "            slot.reset()\n",
@@ -190,7 +190,7 @@
     "class Hadamard(TableModule):\n",
     "    inputs = [SlotDescriptor('x1', type=Table, required=True), \n",
     "              SlotDescriptor('x2', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        x1 = self.get_input_slot('x1')\n",
     "        x2 = self.get_input_slot('x2')\n",
     "        if x1.updated.any() or x1.deleted.any() or x2.updated.any() or x2.deleted.any():\n",
@@ -223,7 +223,7 @@
     "class Hadamard(TableModule):\n",
     "    inputs = [SlotDescriptor('x1', type=Table, required=True), \n",
     "              SlotDescriptor('x2', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        x1 = self.get_input_slot('x1')\n",
     "        x2 = self.get_input_slot('x2')\n",
     "        if x1.updated.any() or x1.deleted.any() or x2.updated.any() or x2.deleted.any():\n",
@@ -255,7 +255,7 @@
    "source": [
     "class Max(TableModule):\n",
     "    inputs = [SlotDescriptor('table', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('table')\n",
     "        if slot.updated.any() or slot.deleted.any():\n",
     "            slot.reset()\n",
@@ -285,7 +285,7 @@
     "class Hadamard(TableModule):\n",
     "    inputs = [SlotDescriptor('x1', type=Table, required=True), \n",
     "              SlotDescriptor('x2', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        x1 = self.get_input_slot('x1')\n",
     "        x2 = self.get_input_slot('x2')\n",
     "        if x1.updated.any() or x1.deleted.any() or x2.updated.any() or x2.deleted.any():\n",
@@ -327,7 +327,7 @@
    "source": [
     "class Max(TableModule):\n",
     "    inputs = [SlotDescriptor('table', type=Table, required=True)]\n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('table')\n",
     "        if slot.updated.any() or slot.deleted.any():\n",
     "            slot.reset()\n",
@@ -360,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('table')\n",
     "        if slot.updated.any() or slot.deleted.any():\n",
     "            slot.reset()\n",
@@ -392,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('table')\n",
     "        if slot.updated.any() or slot.deleted.any():\n",
     "            slot.reset()\n",
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        slot = self.get_input_slot('table')\n",
     "        if slot.updated.any() or slot.deleted.any():\n",
     "            slot.reset()\n",
@@ -469,7 +469,7 @@
     "        if self._table is not None:\n",
     "            self._table.resize(0)\n",
     "    \n",
-    "    def run_step(self, run_number, step_size, howlong):\n",
+    "    def run_step(self, run_number, step_size, quantum):\n",
     "        x1 = self.get_input_slot('x1')\n",
     "        x2 = self.get_input_slot('x2')\n",
     "        if x1.updated.any() or x1.deleted.any() or x2.updated.any() or x2.deleted.any():\n",
